--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,5 +1,7 @@
 /* Design System Variables */
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
+/* Note: Using system fonts for reliability. Add Google Fonts import if needed:
+   @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
+*/
 
 :root {
   /* Primary Brand Palette */
